<package>
  <name>conv_interface_rviz</name>
  <version>0.0.1</version>
  
  <description>
      Package to allow for functional conversational interface in RViz.
  </description>

  <maintainer email="doal8589@colorado.edu">Doncey Albin</maintainer>
  <license> MIT </license>

  <author>Doncey Albin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
